--- a/content/publication/balmer2024a/cite.bib
+++ b/content/publication/balmer2024a/cite.bib
@@ -1,4 +1,4 @@
-@ARTICLE{Balmer2024a,
+@ARTICLE{Balmer2024,
        author = {{Balmer}, William O. and {Pueyo}, L. and {Lacour}, S. and {Wang}, J.~J. and {Stolker}, T. and {Kammerer}, J. and {Pourr{\'e}}, N. and {Nowak}, M. and {Rickman}, E. and {Blunt}, S. and {Sivaramakrishnan}, A. and {Sing}, D. and {Wagner}, K. and {Marleau}, G. -D. and {Lagrange}, A. -M. and {Abuter}, R. and {Amorim}, A. and {Asensio-Torres}, R. and {Berger}, J. -P. and {Beust}, H. and {Boccaletti}, A. and {Bohn}, A. and {Bonnefoy}, M. and {Bonnet}, H. and {Bordoni}, M.~S. and {Bourdarot}, G. and {Brandner}, W. and {Cantalloube}, F. and {Caselli}, P. and {Charnay}, B. and {Chauvin}, G. and {Chavez}, A. and {Choquet}, E. and {Christiaens}, V. and {Cl{\'e}net}, Y. and {Coud{\'e} du Foresto}, V. and {Cridland}, A. and {Davies}, R. and {Dembet}, R. and {Drescher}, A. and {Duvert}, G. and {Eckart}, A. and {Eisenhauer}, F. and {F''orster Schreiber}, N.~M. and {Garcia}, P. and {Garcia Lopez}, R. and {Gendron}, E. and {Genzel}, R. and {Gillessen}, S. and {Girard}, J.~H. and {Grant}, S. and {Haubois}, X. and {Hei{\ss}el}, G. and {Henning}, Th. and {Hinkley}, S. and {Hippler}, S. and {Houll{\'e}}, M. and {Hubert}, Z. and {Jocou}, L. and {Keppler}, M. and {Kervella}, P. and {Kreidberg}, L. and {Kurtovic}, N.~T. and {Lapeyr{\`e}re}, V. and {Le Bouquin}, J. -B. and {L{\'e}na}, P. and {Lutz}, D. and {Maire}, A. -L. and {Mang}, F. and {M{\'e}rand}, A. and {Molli{\`e}re}, P. and {Mordasini}, C. and {Mouillet}, D. and {Nasedkin}, E. and {Ott}, T. and {Otten}, G.~P.~P.~L. and {Paladini}, C. and {Paumard}, T. and {Perraut}, K. and {Perrin}, G. and {Pfuhl}, O. and {Ribeiro}, D.~C. and {Rodet}, L. and {Rustamkulov}, Z. and {Shangguan}, J. and {Shimizu}, T. and {Straubmeier}, C. and {Sturm}, E. and {Tacconi}, L.~J. and {Vigan}, A. and {Vincent}, F. and {Ward-Duong}, K. and {Widmann}, F. and {Winterhalder}, T. and {Woillez}, J. and {Yazici}, S.},
         title = "{VLTI/GRAVITY Provides Evidence the Young, Substellar Companion HD 136164 Ab formed like a ``Failed Star''}",
       journal = {arXiv e-prints},
